--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 asgiref==3.8.1
+async-timeout==5.0.1
 certifi==2024.12.14
 charset-normalizer==3.4.1
 crispy-bootstrap4==2024.10
 crispy-bootstrap5==2024.10
 Django==5.1.4
 django-crispy-forms==2.3
+django-redis==5.4.0
 idna==3.10
 lxml==5.3.0
+redis==5.2.1
 requests==2.32.3
 sqlparse==0.5.3
 typing_extensions==4.12.2
